@@ -67,6 +67,7 @@
 - remove outchecks from documented API
 - support gobject-introspection 
 - new Python binding based on gobject-introspection
+- only spot options at the end of arg strings
 
 12/10/11 started 7.26.6
 - NOCACHE was not being set correctly on OS X causing performance 
